--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
-    "node-rtsp-stream": "github:dbweb-ch/node-rtsp-stream#master"
+    "node-rtsp-stream": "^0.0.8"
   },
   "devDependencies": {
     "gulp": "^4.0.0",
